2005-08-17  Aaron Stone <aaron@serendipity.cx>

	* dsn.c: Missing comma in the class status
	codes. (closes #248).

2005-08-17  Paul J Stevens <paul@nfg.nl>

	* ChangeLog, debian/changelog, debian/rules:
	update python
	* python/bin/inserter.py, python/lib/__init__.pyc, python/lib/dbmail.pyc:
	cleanup python
	* pool.c:
	make getKey failure non-fatal in scoreboard_release
	* Makefile.am, dbmail-imapsession.c, dbsearch.c, dbsearch.h, dm_search.c, 
	  dm_search.h, imaputil.c:
	rename dbsearch.[ch] to dm_search.[ch]
	* dm_search.c, dm_search.h, imaputil.c, tags, test-scripts/testimap.py:
	do imap header searches using the new header tables

2005-08-12  Paul J Stevens <paul@nfg.nl>

	* ChangeLog, python/bin/autoreplier.py, python/bin/inserter.py, 
	  python/lib/__init__.py, python/lib/__init__.pyc, 
	  python/lib/dbmail.py, python/lib/dbmail.pyc:
	initial python libs and scripts

2005-08-11  Paul J Stevens <paul@nfg.nl>

	* ChangeLog, debian/changelog:
	debian snapshot release
	* dbmail-message.c:
	fix leaking file-descriptors (closes: #243)

2005-08-10  Paul J Stevens <paul@nfg.nl>

	* imapd.c, pop3d.c:
	added missing SOCKET config-item
	* check_dbmail_deliver.c, misc.c, misc.h:
	preliminary code for folder patch
	* debian/dbmail.init:
	init script update
	* db.c:
	auto-subscribe auto-created mailboxes

2005-08-09  Paul J Stevens <paul@nfg.nl>

	* sql/postgresql/add_usermap.psql:
	update pgsql usermap table (closes: #224).
	* sql/postgresql/add_header_tables.pgsql:
	add missing tables (closes: #225).
	* main.c:
	minor cleanups
	* misc.c:
	strip remaining artifacts from base subject

2005-08-08  Paul Stevens <paul@nfg.nl>

	* mysql/dbmysql.c: remove spurious double-free warning from
	db_free_result.
	* pool.c: make failure in getKey more verbose, and reorganize locking
	code a little.
	* db.c, sql/mysql/add_auto_replies_fields.mysql,
	sql/postgresql/add_auto_replies_fields.pgsql: add support for
	activation of auto_replies by date.
